--- a/README
+++ b/README
@@ -1,5 +1,16 @@
 DotD In-Raid Tier Display Tool
 #----------------------------------------------------------------------------#
+___________________________
+--:: TABLE OF CONTENTS ::--
+1. ABOUT 
+2. USAGE 
+3. ADDING RAIDS TO THE DATABASE AND MAINTAINING IT
+4. SYMBOLS USED IN THE TIER LIST
+5. VERSION HISTORY
+6. NOTES AND TROUBLESHOOTING
+7. LICENSE
+8. SPECIAL THANKS
+
 _______________
 --:: ABOUT ::--
 
@@ -14,10 +25,10 @@ raids get posted to the chat while I'm not looking there.
 _______________
 --:: USAGE ::--
 
-You'll need AutoHotkey_L installed. I haven't checked if AHK vanilla works with
-it but I built and debugged the script in AutoHotkey ANSI 32-bit v 1.1.22.7
-During installation, you need to have .ahk files associated with it
-so you can run my script.
+You'll need AutoHotkey_L installed. I haven't checked if AHK vanilla works
+with it but I built and debugged the script in AutoHotkey ANSI 32-bit
+version 1.1.22.7. During installation, you need to have .ahk files associated
+with AutoHotkey so you can run my script.
 
 To start the script, double-click main.ahk.
 If you don't see anything immediately happen, that's normal.
@@ -27,11 +38,50 @@ This script is controlled via keyboard shortcuts. The controls:
 
 F1 = Turn on/off raid monitoring.
 F2 = (Debug only!) Add new raid to database
+F3 = (Debug only!) Reserved for testing purposes
 F4 = Exit the application
 
 Now, open up Dawn of the Dragons (if you aren't already playing) and
 enter any raid. If the script recognizes the raid graphics, it should
 display tier information about it in tooltips just below the magics.
+
+_________________________________________________________
+--:: ADDING RAIDS TO THE DATABASE AND MAINTAINING IT ::--
+
+Keep in mind that any raids that you add will not be preserved if you have
+to download a new version of my script and replace raiddb.dat.
+Sorry, I have no way to merge databases yet.
+
+When you enter a raid that does not pop up with a tier listing, push F2 to
+bring up the database editor tool. It will only pop up if the script can
+tell that you're actually in a raid.
+
+Once the dialog pops up over the chat area, the pixels needed to identify
+that raid has been preserved and you may then proceed to hit the raid if
+you need to if you're trying to play the game and add raids to the db at
+the same time.
+
+First scan the list to see if the raid isn't already in the database. It's
+entirely possible that it's there, but does not recognize that particular
+raid background image. Click the name to bring up its tier information.
+You may then edit the tier information, or continue by pushing the
+Add/Update button. When the box closes, the script is fully updated with
+the raid information.
+
+Sometimes raids share graphics with another raid. It is possible to associate
+the same graphic with more than one raid. Just give it another name and
+tier information, or select a preexisting raid off the database if it already
+exists, then click Add/Update.
+
+The raiddb.dat file only updates when the script is fully shut down.
+Shut down the script by pushing F4 at any time.
+
+Any new entries that are added are appended to the bottom of the script.
+If you mess something up, you can manually delete them here.
+
+In order to sort the script, you'll need Python 2.7.x installed. Once you
+get that, you'll need to run dbsort.py. I probably should've done it in
+AHK, but it's just far, far easier in Python.
 
 _______________________________________
 --:: SYMBOLS USED IN THE TIER LIST ::--
@@ -39,6 +89,12 @@ _______________________________________
   ^  Indicates AP. The minimum damage needed to obtain achievement credit.
   *  Indicates OS. This is the best (or optimal) loot per damage.
      Some raids have more than one.
+  k  thousand (kilo). Example: 140k = 140,000. Rarely-used.
+  m  million. Example: 3.4m = 3,400,000.
+  b  billion. Example: 1.5b = 1,500,000,000.
+  t  trillion. Example: 5t = 5,000,000,000,000. Not often used at the moment.
+  q  quadrillion. No. You don't get an example. This actually isn't used
+     in any tier listings, and I hope it never does.
 
 _________________________
 --:: VERSION HISTORY ::--
@@ -48,11 +104,14 @@ _________________________
 0.11 - Figuring out this Git thing. Added more raids to database since
        version 0.10 (not recorded). Also added a license because I hear that's
        an important thing to have if people are going to be using this tool.
-0.12 - Added all the newer guild raids, put in placeholders for the other
-       guild raids, and filled in a few gaps in the Z10+ raid list.
-       Also updated this doc to explain those funny symbols in the tier chart.
-_______________
---:: NOTES ::--
+0.12 - Filled in a few gaps in the Z10+ raid coverage, started working on
+       newer guild raids.
+0.13 - Minor coverage updates in commonly seen Z10+ raids.
+       Added more symbols and notes to documentation.
+       Added instructions on how to make changes to the raid database.
+
+_________________________________________________
+--:: NOTES AND TROUBLESHOOTING ::--
 
 This is a Windows-only tool. Sorry *nix, Mac people. Was never able to figure
 out how to get IronAHK to work for cross-platform compatibility.
@@ -60,11 +119,30 @@ out how to get IronAHK to work for cross-platform compatibility.
 Also, the script expects all color depths to be at least 24 bit. Detection
 runs the risk of failing otherwise.
 
+DO NOT ZOOM IN. The script expects everything to be at 100% zoom.
+If you want it to work with zoom, you'll need to resample home.bmp to the
+exact zoom you play the game at, resample the entire raid database, and
+hope to whatever deity you pray to that the color interpolation algorithm
+used to smooth out pixels in your zoomed state doesn't change behind
+your back. Too much work.
+
+Campaigns aren't supported yet. For now, you'll end up with some false
+positives for campaign bosses such as Horthania and Imryx.
+
+_________________
+--:: LICENSE ::--
+
+See the plaintext file named LICENSE for more information.
+
+A friend of mine convinced me that having a license is important if I
+want people to actually use my work. So I picked the MIT license since
+it lets people do just that.
+
 ________________________
 --:: SPECIAL THANKS ::--
 
-Dusan, Idrinth, and Warric for their inline tier script, from where most of the
-raid tier data was transcribed.
+Dusan, Idrinth, and Warric for their inline tier script, from where most
+of the raid tier data was transcribed.
 
 ShortStabber. Their interest in the and the desire (both SS' and mine)
 for soemthing easier than actually having to look up tiers and potentially
