db coverage update

--- a/README
+++ b/README
@@ -176,7 +176,8 @@ _________________________
 0.23 - Docs updated to fix typo, headers modified, sections rearranged
        Update db coverage including GD campaign
 0.24 - Source updated to fix raid/camp ident problem
-       Updated db coverage       
+       Updated db coverage
+0.25 - Updated db coverage
        
 ________________________
 --:: SPECIAL THANKS ::--
