db coverage update

--- a/README
+++ b/README
@@ -178,6 +178,7 @@ _________________________
 0.24 - Source updated to fix raid/camp ident problem
        Updated db coverage
 0.25 - Updated db coverage
+0.26 - Updated db coverage
        
 ________________________
 --:: SPECIAL THANKS ::--
