Updated db coverage, db fix

--- a/README
+++ b/README
@@ -179,6 +179,7 @@ _________________________
        Updated db coverage
 0.25 - Updated db coverage
 0.26 - Updated db coverage
+0.27 - Updated db coverage, fixes
        
 ________________________
 --:: SPECIAL THANKS ::--
