db coverage update

--- a/README
+++ b/README
@@ -180,6 +180,7 @@ _________________________
 0.25 - Updated db coverage
 0.26 - Updated db coverage
 0.27 - Updated db coverage, fixes
+0.28 - Updated db coverage
        
 ________________________
 --:: SPECIAL THANKS ::--
