--- a/README
+++ b/README
@@ -62,6 +62,7 @@ _______________________________________
   t  trillion. Example: 5t = 5,000,000,000,000. Not often used at the moment.
   q  quadrillion. No. You don't get an example. This actually isn't used
      in any tier listings, and I hope it never does.
+     EDIT: Powercreep happened. Some of the new deadlies now use them.
 
 _______________________________________________
 --:: ADDING RAIDS AND DATABASE MAINTENANCE ::--
